# flutter_webrtc_noise_suppressor

./: pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/flutter_webrtc_noise_suppressor/: FlutterWebrtcNoiseSuppressorPlugin.kt
ios/: flutter_webrtc_noise_suppressor.podspec
ios/Classes/: FlutterWebrtcNoiseSuppressorPlugin.h  FlutterWebrtcNoiseSuppressorPlugin.m
lib/: flutter_webrtc_noise_suppressor.dart  flutter_webrtc_noise_suppressor_web.dart
lib/src/: noise_processing_mode.dart  noise_suppressor.dart  noise_suppressor_method_channel.dart  noise_suppressor_platform_interface.dart
linux/: CMakeLists.txt  flutter_webrtc_noise_suppressor_plugin.cc
linux/flutter_webrtc_noise_suppressor/: flutter_webrtc_noise_suppressor_plugin.h
src/: noise_suppressor_processor.cc  noise_suppressor_processor.h
windows/: CMakeLists.txt  flutter_webrtc_noise_suppressor_plugin.cc  flutter_webrtc_noise_suppressor_plugin.h
